--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
 ---
 layout: home
-author_profile: true
+title: " "
+header:
+  overlay_image: "assets/images/utah_hills.jpg"
+author-profile: false
+
+feature_row:
+  - image_path: assets/images/art_blue.png
+    alt: "placeholder image 1"
+    title: "Research"
+    excerpt: 'Explore how I use spatial data to study our changing world'
+    url: /research/
+    btn_label: "Read More"
+    btn_class: "btn--primary"
 ---
+<b>Hi, I'm Nils.</b>
+<br>
+<img align="left" 
+         src="assets/images/me_pixelated.jpg" 
+         alt="">
+
+I'm a PhD student in Earth System Sciences in the <a href="https://www.ieu.uzh.ch/en/research/ecology/spatial.html">Spatial Ecology and Remote Sensing Group</a> at the University of Zurich studying the effect of heatwaves, droughts, and wildfires on Arctic tundra ecosystems. 
+
+{% include feature_row id="feature_row" type="left" %}
