Added new sites and posts

--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 ---
 layout: home
-title: " "
+title: ""
 header:
   overlay_image: "assets/images/utah_hills.jpg"
 author-profile: false
 
 feature_row:
-  - image_path: assets/images/art_blue.png
+  - image_path: assets/images/LST_snapshot.png
     alt: "placeholder image 1"
     title: "Research"
-    excerpt: 'Explore how I use spatial data to study our changing world'
+    excerpt: 'Check out the research that I conducted during my PhD.'
     url: /research/
     btn_label: "Read More"
     btn_class: "btn--primary"
+  - image_path: assets/images/art_blue.png
+    alt: "placeholder image 1"
+    title: "Maps and accidental art"
+    excerpt: 'Browse through some mapping projects, contributions to the #30DayMapChallenge and accidental art created along my PhD projects'
+    url: /maps/
+    btn_label: "Read More"
+    btn_class: "btn--primary"
 ---
+
 <!-- Profile picture as round avatar -->
 <!-- <div class="author__avatar_large">
   <a href="{{ author.home | default: '/' | absolute_url }}">
@@ -28,7 +36,7 @@ feature_row:
   <img src="assets/images/me_pixelated.jpg" alt="">
 </figure> 
 
-<b>Hi, I'm Nils.</b> <br> I'm a PhD student in Earth System Sciences in the <a href="https://www.ieu.uzh.ch/en/research/ecology/spatial.html">Spatial Ecology and Remote Sensing Group</a> at the University of Zurich studying the effect of heatwaves, droughts, and wildfires on Arctic tundra ecosystems. 
+<b>Hi, I'm Nils.</b> <br> I'm a PhD student in Earth System Sciences in the <a href="https://www.ieu.uzh.ch/en/research/ecology/spatial.html">Spatial Ecology and Remote Sensing Group</a> and <a href="https://www.geo.uzh.ch/en/units/rs/research/TIRLab.html">TIRlab</a> at the University of Zurich. My PhD is part of a larger project contributing to the TRISHNA mission, an upcoming satellite mission focussing on high-resolution thermal remote sensing. I apply remote sensing techniques across spatial scales to study the effects of heatwaves, droughts, and wildfires on Arctic tundra ecosystems.
 
 <style>
   .bottom-three {
